RESOLVED FIXED16774
REGRESSION (r27464-r27504) javascript popup menu does not display 'close' button
https://bugs.webkit.org/show_bug.cgi?id=16774
Summary REGRESSION (r27464-r27504) javascript popup menu does not display 'close' button
Cameo Wood
Reported 2008-01-07 12:06:13 PST
1. Go to http://www.parkplaza.com/londonuk_sherlockholmes 2. Choose an arbitrary check-in and check out date, hit 'go' 3. click on the 'hot deal' or other room/rate description links 4. The box should appear, but not the 'close' button in the top upper right of the window, on the grey bar.
Attachments
Reduction (492 bytes, text/html)
2008-01-25 22:12 PST, mitz
no flags
Patch, including change log and pixel test (8.91 KB, patch)
2008-01-25 23:59 PST, mitz
darin: review+
Matt Lilek
Comment 1 2008-01-07 18:02:02 PST
(In reply to comment #0) > 4. The box should appear, but not the 'close' button in the top upper right of > the window, on the grey bar. > Just to clarify, a box *will* appear, but the close button in the upper right *won't* appear.
mitz
Comment 2 2008-01-07 22:10:01 PST
This is a regression from Leopard.
David Kilzer (:ddkilzer)
Comment 3 2008-01-08 03:31:30 PST
Not just a windows bug; occurs with a local debug build of WebKit r29227 with Safari 3.0.4 (523.12.2) on Mac OS X 10.4.11 (8S165).
David Kilzer (:ddkilzer)
Comment 4 2008-01-08 04:53:46 PST
I tried running bisect-builds on this bug, but the range keeps changing. There seems to be a race condition that happens when the "close" button is drawn versus how the rest of the window is drawn. The results I've had (both "Works" revisions have been invalidated by rechecking the range): Works: r27595 Fails: r27628 Works: r27504 Fails: r27582 You can prove to yourself that the "close" button is still present by double-clicking on the link that brings up the "pop-up" menu. It causes a drawing issue with the JavaScript, but after two or three double-clicks, you'll see the "close" button reappear.
mitz
Comment 5 2008-01-25 22:12:37 PST
Created attachment 18696 [details] Reduction
mitz
Comment 7 2008-01-25 23:59:05 PST
Created attachment 18700 [details] Patch, including change log and pixel test
mitz
Comment 8 2008-01-26 00:25:55 PST
Perhaps some further explanation is in order: this is the case where the parent is "returning" a float to the child because it is no longer overhanging from the parent. In most circumstances when this happens, the child needs layout, so it reclaims the float anyway, but not in this particular case. If the parent becomes shorter again, it will scan its children for overhanging floats and reclaim them (that is what the code added in r27486 does).
Darin Adler
Comment 9 2008-01-28 07:57:11 PST
Comment on attachment 18700 [details] Patch, including change log and pixel test I was waiting for Hyatt to review this, but I think I've waited long enough. Looks right. r=me
mitz
Comment 10 2008-01-28 09:42:14 PST
Note You need to log in before you can comment on or make changes to this bug.