WebCore:

Reviewed by Darin Adler.

        - fix http://bugs.webkit.org/show_bug.cgi?id=16774
          REGRESSION (r27464-r27504) javascript popup menu does not display 'close' button

        Test: fast/dynamic/float-no-longer-overhanging.html

        * rendering/RenderBlock.cpp:
        (WebCore::RenderBlock::addOverhangingFloats): If a child's float turns
        out not to be overhanging at this time, ensure that the child paints it.

LayoutTests:

        Reviewed by Darin Adler.

        - pixel test for http://bugs.webkit.org/show_bug.cgi?id=16774
          REGRESSION (r27464-r27504) javascript popup menu does not display 'close' button

        * fast/dynamic/float-no-longer-overhanging.html: Added.
        * platform/mac/fast/dynamic/float-no-longer-overhanging-expected.checksum: Added.
        * platform/mac/fast/dynamic/float-no-longer-overhanging-expected.png: Added.
        * platform/mac/fast/dynamic/float-no-longer-overhanging-expected.txt: Added.



Canonical link: https://commits.webkit.org/23656@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@29834 268f45cc-cd09-0410-ab3c-d52691b4dbfc